--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/5. Deep learning for sequences/RNN-task.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/5. Deep learning for sequences/RNN-task.ipynb
@@ -295,7 +295,7 @@
     "# Defining a recurrent neural network\n",
     "\n",
     "We can rewrite recurrent neural network as a consecutive application of dense layer to input $x_t$ and previous rnn state $h_t$. This is exactly what we're gonna do now.\n",
-    "<img src=\"./rnn.png\" width=600>\n",
+    "<img src=\"image/rnn.png?raw=1\" style=\"width:30%\">\n",
     "\n",
     "Since we're training a language model, there should also be:\n",
     "* An embedding layer that converts character id x_t to a vector.\n",
@@ -355,7 +355,7 @@
    "source": [
     "We will generate names character by character starting with `start_token`:\n",
     "\n",
-    "<img src=\"./char-nn.png\" width=600>"
+    "<img src=\"image/char-nn.png?raw=1\" style=\"width:30%\">\n"
    ]
   },
   {
