--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/5. Deep learning for sequences/pos-task.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/5. Deep learning for sequences/pos-task.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Part Of Speech Tagging\n",
     "\n",
-    "<img src=https://i.stack.imgur.com/6pdIT.png width=320>\n",
+    "<img src=\"image/6pdIT.png?raw=1\" style=\"width:50%\">",
     "\n",
     "Unlike our previous experience with language modelling, this time around we learn the mapping between two different kinds of elements.\n",
     "\n",
